feat: use jwt to protect crd forge and list (#16)
