# internal/handlers/schema.go
@@ -5,10 +5,13 @@ import (
 	"fmt"
 	"log/slog"
 	"net/http"
+	"time"
 
 	xcontext "github.com/krateoplatformops/plumbing/context"
 	"github.com/krateoplatformops/plumbing/http/response"
+	"github.com/krateoplatformops/plumbing/kubeconfig"
 	"github.com/krateoplatformops/smithery/internal/crds"
+	"github.com/krateoplatformops/smithery/internal/handlers/util"
 	"k8s.io/apimachinery/pkg/api/errors"
 	"k8s.io/apimachinery/pkg/runtime/schema"
 )
@@ -21,6 +24,7 @@ import (
 // @Param resource query string true "Resource name"
 // @Success 200 {object} object
 // @Router /schema [get]
+// @Security Bearer
 func Schema() http.Handler {
 	return &schemaHandler{}
 }
@@ -30,20 +34,43 @@ var _ http.Handler = (*schemaHandler)(nil)
 type schemaHandler struct{}
 
 func (r *schemaHandler) ServeHTTP(wri http.ResponseWriter, req *http.Request) {
-	log := xcontext.Logger(req.Context())
-
 	gvr, err := parseGVR(req)
 	if err != nil {
 		response.BadRequest(wri, err)
 		return
 	}
-	log.Debug("fetching custom resource definition",
-		slog.String("resource", gvr.Resource),
-		slog.String("version", gvr.Version),
-	)
+
+	log := xcontext.Logger(req.Context()).
+		With(
+			slog.Group("resource",
+				slog.String("name", gvr.Resource),
+				slog.String("group", gvr.Group),
+				slog.String("version", gvr.Version),
+			),
+		)
+
+	start := time.Now()
+
+	ep, err := xcontext.UserConfig(req.Context())
+	if err != nil {
+		log.Error("unable to get user endpoint", slog.Any("err", err))
+		response.Unauthorized(wri, err)
+		return
+	}
+
+	rc, err := kubeconfig.NewClientConfig(req.Context(), ep)
+	if err != nil {
+		log.Error("unable to create kubernetes client config", slog.Any("err", err))
+		response.InternalError(wri, err)
+		return
+	}
+
+	log.Debug("fetching custom resource definition")
 
 	crd, err := crds.Get(req.Context(), crds.GetOptions{
-		Name: gvr.GroupResource().String(), Version: gvr.Version,
+		RC:      rc,
+		Name:    gvr.GroupResource().String(),
+		Version: gvr.Version,
 	})
 	if err != nil {
 		if errors.IsNotFound(err) {
@@ -54,16 +81,15 @@ func (r *schemaHandler) ServeHTTP(wri http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	log.Debug("fetching openapi schema",
-		slog.String("resource", gvr.GroupResource().String()),
-		slog.String("version", gvr.Version),
-	)
+	log.Debug("fetching openapi schema")
 
 	crv, err := crds.OpenAPISchema(crd, gvr.Version)
 	if err != nil {
 		response.InternalError(wri, err)
 		return
 	}
+
+	log.Info("openapi schema successfully fetched", slog.String("duration", util.ETA(start)))
 
 	wri.Header().Set("Content-Type", "application/json")
 	wri.WriteHeader(http.StatusOK)
